remove all icones avatar

--- a/job-detail.html
+++ b/job-detail.html
@@ -36,16 +36,16 @@
                         <h1>Senior UX Designer</h1>
                         <div class="job-detail-company">Acme Corp • San Francisco, CA (Hybrid) •</div>
                         <div class="job-detail-meta">
-                            <span class="detail-meta-item meta-salary">💰 $120k - $160k/year</span>
-                            <span class="detail-meta-item">💼 Full-time</span>
-                            <span class="detail-meta-item">🌍 Remote Friendly</span>
-                            <span class="detail-meta-item">⭐ Senior Level</span>
+                            <span class="detail-meta-item meta-salary"><!-- add icone --> $120k - $160k/year</span>
+                            <span class="detail-meta-item"><!-- add icone --> Full-time</span>
+                            <span class="detail-meta-item"><!-- add icone --> Remote Friendly</span>
+                            <span class="detail-meta-item"><!-- add icone --> Senior Level</span>
                         </div>
                     </div>
                 </div>
                 <div class="job-detail-actions">
                     <button class="btn btn-primary">Apply Now</button>
-                    <button class="btn btn-secondary">🔖 Save</button>
+                    <button class="btn btn-secondary"><!-- add icone --> Save</button>
                 </div>
             </div>
 
@@ -75,28 +75,28 @@
                 <h3>Perks & Benefits</h3>
                 <div class="benefits-grid">
                     <div class="benefit-item">
-                        <div class="benefit-icon">🏥</div>
+                        <div class="benefit-icon"><!-- add icone --></div>
                         <div class="benefit-text">
                             <strong>Health Insurance</strong>
                             <span>Comprehensive coverage</span>
                         </div>
                     </div>
                     <div class="benefit-item">
-                        <div class="benefit-icon">🏖️</div>
+                        <div class="benefit-icon"><!-- add icone --></div>
                         <div class="benefit-text">
                             <strong>Unlimited PTO</strong>
                             <span>Work-life balance</span>
                         </div>
                     </div>
                     <div class="benefit-item">
-                        <div class="benefit-icon">💰</div>
+                        <div class="benefit-icon"><!-- add icone --></div>
                         <div class="benefit-text">
                             <strong>401k Matching</strong>
                             <span>Up to 5% match</span>
                         </div>
                     </div>
                     <div class="benefit-item">
-                        <div class="benefit-icon">🏠</div>
+                        <div class="benefit-icon"><!-- add icone --></div>
                         <div class="benefit-text">
                             <strong>Home Office Setup</strong>
                             <span>$1,000 stipend</span>
@@ -112,28 +112,28 @@
                 <h4>About Acme Corp</h4>
                 <p style="color: #666; font-size: 0.9rem; margin-bottom: 1rem;">Acme Corp is a leading fintech company revolutionizing digital banking through technology and design.</p>
                 <div class="company-info-item">
-                    <span style="color: #4A90E2;">👥</span>
+                    <span style="color: #4A90E2;"><!-- add icone --></span>
                     <div>
                         <strong>Company Size</strong>
                         <span>500-1000</span>
                     </div>
                 </div>
                 <div class="company-info-item">
-                    <span style="color: #4A90E2;">🏭</span>
+                    <span style="color: #4A90E2;"><!-- add icone --></span>
                     <div>
                         <strong>Industry</strong>
                         <span>Fintech</span>
                     </div>
                 </div>
                 <div class="company-info-item">
-                    <span style="color: #4A90E2;">📍</span>
+                    <span style="color: #4A90E2;"><!-- add icone --></span>
                     <div>
                         <strong>Location</strong>
                         <span>San Francisco</span>
                     </div>
                 </div>
                 <div class="company-info-item">
-                    <span style="color: #4A90E2;">🎉</span>
+                    <span style="color: #4A90E2;"><!-- add icone --></span>
                     <div>
                         <strong>Founded</strong>
                         <span>2015</span>
