--- a/jobs.html
+++ b/jobs.html
@@ -30,11 +30,11 @@
         <h2 class="search-title">Find your next dream job</h2>
         <div class="search-container">
             <div class="search-input-group">
-                <span class="search-icon">🔍</span>
+                <span class="search-icon"><!-- add icone --></span>
                 <input type="text" placeholder="Product Designer" id="jobInput">
             </div>
             <div class="search-input-group">
-                <span class="location-icon">📍</span>
+                <span class="location-icon"><!-- add icone --></span>
                 <input type="text" placeholder="New York, NY" id="locationInput">
             </div>
             <button class="search-btn" onclick="performSearch()">Search</button>
