--- a/signup.html
+++ b/signup.html
@@ -56,8 +56,8 @@
                 </div>
 
                 <div class="social-login" style="margin: 2rem 0;">
-                    <button type="button" class="social-btn">🔵 Continue with Google</button>
-                    <button type="button" class="social-btn">💼 Continue with LinkedIn</button>
+                    <button type="button" class="social-btn"><!-- add avatar --> Continue with Google</button>
+                    <button type="button" class="social-btn"><!-- add avatar --> Continue with LinkedIn</button>
                 </div>
 
                 <div class="divider">
@@ -79,7 +79,7 @@
                         <label>Password</label>
                         <div style="position: relative; display: flex; align-items: center;">
                             <input type="password" id="passwordInputStep1" name="password" placeholder="At least 8 characters" required style="flex: 1; padding-right: 40px;">
-                            <button type="button" class="password-toggle" style="position: absolute; right: 10px; background: none; border: none; cursor: pointer; font-size: 1rem; padding: 0;" onclick="togglePasswordStep1()">👁️</button>
+                            <button type="button" class="password-toggle" style="position: absolute; right: 10px; background: none; border: none; cursor: pointer; font-size: 1rem; padding: 0;" onclick="togglePasswordStep1()"><!-- add avatar --></button>
                         </div>
                     </div>
 
@@ -109,7 +109,7 @@
                     <div style="margin: 2rem 0;">
                         <div class="role-option" id="jobSeekerRole" onclick="selectRole('job-seeker')" style="border: 2px solid #4A90E2; padding: 1.5rem; border-radius: 8px; margin-bottom: 1rem; cursor: pointer; background: rgba(74, 144, 226, 0.05); transition: all 0.3s;">
                             <div style="display: flex; align-items: center; gap: 1rem;">
-                                <span style="font-size: 1.5rem;">👤</span>
+                                <span style="font-size: 1.5rem;"><!-- add avatar --></span>
                                 <div style="flex: 1;">
                                     <strong>Job Seeker</strong>
                                     <div style="color: #999; font-size: 0.85rem;">I'm looking for a new job or project.</div>
@@ -120,7 +120,7 @@
 
                         <div class="role-option" id="employerRole" onclick="selectRole('employer')" style="border: 2px solid #E0E6ED; padding: 1.5rem; border-radius: 8px; cursor: pointer; transition: all 0.3s;">
                             <div style="display: flex; align-items: center; gap: 1rem;">
-                                <span style="font-size: 1.5rem;">🏢</span>
+                                <span style="font-size: 1.5rem;"><!-- add avatar --></span>
                                 <div style="flex: 1;">
                                     <strong>Employer</strong>
                                     <div style="color: #999; font-size: 0.85rem;">I'm hiring talent for my company.</div>
