--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
             <div class="timeline-item">
                 <div class="timeline-year">2018</div>
                 <div class="timeline-content">
-                    <h3>🚀 The Beginning</h3>
+                    <h3><!-- add icone --> The Beginning</h3>
                     <p>Founded in a small garage in San Francisco with a simple mission: simplify hiring. We launched our beta with just 5 companies.</p>
                 </div>
             </div>
@@ -74,7 +74,7 @@
             <div class="timeline-item">
                 <div class="timeline-year">2020</div>
                 <div class="timeline-content">
-                    <h3>📈 First Milestone</h3>
+                    <h3><!-- add icone --> First Milestone</h3>
                     <p>Hit 1,000 active daily users and secured Series A funding. The team grew from 3 to 25 remote employees.</p>
                 </div>
             </div>
@@ -82,7 +82,7 @@
             <div class="timeline-item">
                 <div class="timeline-year">2023</div>
                 <div class="timeline-content">
-                    <h3>🌍 Going Global</h3>
+                    <h3><!-- add icone --> Going Global</h3>
                     <p>Expanded operations to 3 continents. Launched multi-language support and AI-driven matching algorithms.</p>
                 </div>
             </div>
@@ -90,7 +90,7 @@
             <div class="timeline-item">
                 <div class="timeline-year">2024 & Beyond</div>
                 <div class="timeline-content">
-                    <h3>⭐ Building the Future</h3>
+                    <h3><!-- add icone --> Building the Future</h3>
                     <p>We are just getting started. Join us as we redefine what it means to find meaningful work.</p>
                 </div>
             </div>
@@ -102,17 +102,17 @@
         <h2 style="margin-bottom: 3rem;">Our Core Values</h2>
         <div class="core-values">
             <div class="value-card">
-                <div class="value-icon">✓</div>
+                <div class="value-icon"><!-- add icone --></div>
                 <h3>Integrity First</h3>
                 <p>We believe in doing the right thing, even when no one is watching. Transparency is key to our process.</p>
             </div>
             <div class="value-card">
-                <div class="value-icon">❤️</div>
+                <div class="value-icon"><!-- add icone --></div>
                 <h3>User Obsessed</h3>
                 <p>Whether you are a candidate or an employer, your experience is our top priority. We build for you.</p>
             </div>
             <div class="value-card">
-                <div class="value-icon">📈</div>
+                <div class="value-icon"><!-- add icone --></div>
                 <h3>Constant Growth</h3>
                 <p>We are data-driven and always learning. We embrace change and push boundaries every day.</p>
             </div>
@@ -124,26 +124,27 @@
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 3rem;">
             <h2>Meet the Team</h2>
             <a href="#" style="color: #4A90E2; font-weight: 600;">See all members →</a>
+            
         </div>
 
         <div class="team-grid">
             <div class="team-member">
-                <div class="team-member-img"></div>
+                <div class="team-member-img"><!-- add avatar --></div>
                 <h4>Sarah Jenkins</h4>
                 <span>CEO & Founder</span>
             </div>
             <div class="team-member">
-                <div class="team-member-img"></div>
+                <div class="team-member-img"><!-- add avatar --></div>
                 <h4>David Chen</h4>
                 <span>Chief Technology Officer</span>
             </div>
             <div class="team-member">
-                <div class="team-member-img"></div>
+                <div class="team-member-img"><!-- add avatar --></div>
                 <h4>Emily Rodriguez</h4>
                 <span>Head of Product</span>
             </div>
             <div class="team-member">
-                <div class="team-member-img"></div>
+                <div class="team-member-img"><!-- add avatar --></div>
                 <h4>Marcus Johnson</h4>
                 <span>VP of Sales</span>
             </div>
