remove icones from aontct page

--- a/contact.html
+++ b/contact.html
@@ -65,21 +65,21 @@
                 <h3 style="margin-bottom: 1.5rem;">Contact Information</h3>
                 <div class="contact-info">
                     <div class="info-block">
-                        <div class="info-icon">📧</div>
+                        <div class="info-icon"><!-- add icone --></div>
                         <div class="info-text">
                             <strong>Email</strong>
                             <span>support@jobportal.com</span>
                         </div>
                     </div>
                     <div class="info-block">
-                        <div class="info-icon">📞</div>
+                        <div class="info-icon"><!-- add icone --></div>
                         <div class="info-text">
                             <strong>Phone</strong>
                             <span>+1 (555) 123-4567</span>
                         </div>
                     </div>
                     <div class="info-block">
-                        <div class="info-icon">📍</div>
+                        <div class="info-icon"><!-- add icone --></div>
                         <div class="info-text">
                             <strong>Office</strong>
                             <span>123 Career Blvd, Suite 100<br>San Francisco, CA 94105</span>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="contact-map">
-                    🗺️ Map View
+                    <!-- add icone --> Map View
                 </div>
             </div>
         </div>
