optimaze for mobile part 2

--- a/signup.html
+++ b/signup.html
@@ -261,6 +261,6 @@
             document.getElementById('step1').style.display = 'block';
         }
     </script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
