--- a/job-detail.html
+++ b/job-detail.html
@@ -228,6 +228,6 @@
     </footer>
 
     <script src="jobDatabase.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
