--- a/jobs.html
+++ b/jobs.html
@@ -234,6 +234,6 @@
 
 
     <script src="jobDatabase.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
