--- a/login.html
+++ b/login.html
@@ -142,7 +142,7 @@
             }
         }
     </script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
 
