add responsive dashboard and make database to auth system and update auth system

--- a/job-detail.html
+++ b/job-detail.html
@@ -229,7 +229,6 @@
         </div>
     </footer>
 
-    <script src="jobDatabase.js"></script>
-    <script src="script.js" defer></script>
+    <script src="jobDatabase.js"></script>    <script src="authDatabase.js"></script>    <script src="script.js" defer></script>
 </body>
 </html>
