--- a/jobs.html
+++ b/jobs.html
@@ -235,7 +235,6 @@
     </footer>
 
 
-    <script src="jobDatabase.js"></script>
-    <script src="script.js" defer></script>
+    <script src="jobDatabase.js"></script>    <script src="authDatabase.js"></script>    <script src="script.js" defer></script>
 </body>
 </html>
