--- a/index.html
+++ b/index.html
@@ -232,7 +232,6 @@
             <div class="footer-bottom-right">English (US) • Cookies</div>
         </div>
     </footer>
-
-    <script src="script.js" defer></script>
+    <script src="authDatabase.js"></script>    <script src="script.js" defer></script>
 </body>
 </html>
