update about page

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
     <!-- Hero -->
     <div class="about-hero scroll-fade-in">
         <div style="max-width: 1200px; margin: 0 auto;">
-            <div class="about-hero-img"></div>
+            <div class="about-hero-img"><!-- add image --></div>
             <h1>Connecting Potential to Opportunity</h1>
             <p>We are building the future of hiring by bridging the gap between talent and the world's best companies. Our mission is to make job hunting human again.</p>
             <div class="about-cta-buttons">
@@ -144,9 +144,7 @@
     <!-- Team -->
     <div style="max-width: 1200px; margin: 4rem auto; padding: 0 2rem;">
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 3rem;">
-            <h2>Meet the Team</h2>
-            <a href="#" style="color: #4A90E2; font-weight: 600;">See all members →</a>
-            
+            <h2>Meet the Team</h2>            
         </div>
 
         <div class="team-grid">
