--- a/jobs.html
+++ b/jobs.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find Jobs - JobPortal</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="jobs.css">
     <link rel="stylesheet" href="animations.css">
     <script src="animations.js" defer></script>
 </head>
