update folder stucture

--- a/pages/job-detail.html
+++ b/pages/job-detail.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Details - JobPortal</title>
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="job-detail.css">
-    <link rel="stylesheet" href="animations.css">
-    <script src="animations.js" defer></script>
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/job-detail.css">
+    <link rel="stylesheet" href="/assets/css/animations.css">
+    <script src="/assets/js/animations.js" defer></script>
 </head>
 <body>
     <!-- Header -->
     <header>
-        <a href="index.html" class="logo">
+        <a href="/index.html" class="logo">
             <div class="logo-icon">JP</div>
             <span>JobPortal</span>
         </a>
@@ -194,15 +194,21 @@
                     <div class="footer-logo-icon">JP</div>
                     JobPortal
                 </div>
-                <p class="footer-desc">The world's leading professional network for finding your next career milestone.</p>
+                <p class="footer-desc">The world's leading professional network for finding your next career milestone and connecting with top talent.</p>
+                <div class="footer-social">
+                    <div class="social-icon">f</div>
+                    <div class="social-icon">𝕏</div>
+                    <div class="social-icon">in</div>
+                </div>
             </div>
 
             <div class="footer-section scroll-slide-up">
                 <h4>For Job Seekers</h4>
                 <div class="footer-links">
-                    <a href="jobs.html">Browse Jobs</a>
+                    <a href="pages/jobs.html">Browse Jobs</a>
                     <a href="#">Career Advice</a>
                     <a href="#">Salary Tools</a>
+                    <a href="#">Resume Builder</a>
                 </div>
             </div>
 
@@ -212,24 +218,36 @@
                     <a href="#">Post a Job</a>
                     <a href="#">Hiring Solutions</a>
                     <a href="#">Pricing Plans</a>
+                    <a href="#">Talent Pool</a>
                 </div>
             </div>
 
             <div class="footer-section scroll-slide-up">
                 <h4>Our Company</h4>
                 <div class="footer-links">
-                    <a href="about.html">About Us</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="pages/about.html">About Us</a>
+                    <a href="pages/contact.html">Contact</a>
                     <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of Service</a>
+                </div>
+            </div>
+
+            <div class="footer-section scroll-slide-up">
+                <h4>Language</h4>
+                <div class="footer-links">
+                    <a href="#">English (US)</a>
+                    <a href="#">Cookies</a>
                 </div>
             </div>
         </div>
 
         <div class="footer-bottom scroll-slide-up">
             <span>© 2026 JobPortal Inc. All rights reserved.</span>
+            <div class="footer-bottom-right">English (US) • Cookies</div>
         </div>
     </footer>
 
-    <script src="jobDatabase.js"></script>    <script src="authDatabase.js"></script>    <script src="script.js" defer></script>
+    <script src="/assets/js/jobDatabase.js"></script>    <script src="/assets/js/authDatabase.js"></script>    <script src="/assets/js/global.js" defer></script>
+    <script src="/assets/js/job-detail.js" defer></script>
 </body>
 </html>
