--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JobPortal - Find Your Dream Job</title>
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="animations.css">
-    <script src="animations.js" defer></script>
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/animations.css">
+    <script src="assets/js/animations.js" defer></script>
 </head>
 <body>
     <!-- Header -->
@@ -17,13 +17,13 @@
             <span>JobPortal</span>
         </a>
         <nav class="desktop-nav">
-            <a href="jobs.html">Find Jobs</a>
-            <a href="about.html">Companies</a>
-            <a href="contact.html">Contact</a>
+            <a href="pages/jobs.html">Find Jobs</a>
+            <a href="pages/about.html">Companies</a>
+            <a href="pages/contact.html">Contact</a>
         </nav>
         <div class="auth-buttons">
-            <a href="login.html" class="btn-login">Login</a>
-            <a href="signup.html" class="btn-signup">Sign Up Free</a>
+            <a href="pages/login.html" class="btn-login">Login</a>
+            <a href="pages/signup.html" class="btn-signup">Sign Up Free</a>
         </div>
         <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
             <span class="hamburger-line"></span>
@@ -36,12 +36,12 @@
     <div class="mobile-menu-overlay">
         <div class="mobile-menu-content">
             <nav class="mobile-nav">
-                <a href="jobs.html">Find Jobs</a>
-                <a href="about.html">Companies</a>
-                <a href="contact.html">Contact</a>
+                <a href="pages/jobs.html">Find Jobs</a>
+                <a href="pages/about.html">Companies</a>
+                <a href="pages/contact.html">Contact</a>
                 <div class="mobile-auth-buttons">
-                    <a href="login.html" class="btn-login">Login</a>
-                    <a href="signup.html" class="btn-signup">Sign Up Free</a>
+                    <a href="pages/login.html" class="btn-login">Login</a>
+                    <a href="pages/signup.html" class="btn-signup">Sign Up Free</a>
                 </div>
             </nav>
         </div>
@@ -69,7 +69,7 @@
         </div>
 
         <div class="hero-card">
-            <img src="./assests/Boy.png" alt="Hero Image">
+            <img src="assets/images/Boy.png" alt="Hero Image">
         </div>
     </section>
 
@@ -100,27 +100,27 @@
                 <h2>Explore by Category</h2>
                 <p class="section-subtitle">Tailored opportunities in every professional domain. Start your search by selecting a field you excel in.</p>
             </div>
-            <a href="jobs.html" class="view-all">View all categories →</a>
+            <a href="pages/jobs.html" class="view-all">View all categories →</a>
         </div>
 
         <div class="categories">
             <div class="category-card scroll-rotate-in">
-                <div class="category-icon"><img src="./assests//category/Web Developer.png" alt="Web Developer"></div>
+                <div class="category-icon"><img src="assets/images/category/Web Developer.png" alt="Web Developer"></div>
                 <h3>Web Development</h3> 
                 <p>1,200+ open roles</p>
             </div>
             <div class="category-card scroll-rotate-in">
-                <div class="category-icon"><img src="./assests//category/UI-UX Designer.png" alt="Designer"></div>
+                <div class="category-icon"><img src="assets/images/category/UI-UX Designer.png" alt="Designer"></div>
                 <h3>Design</h3>
                 <p>850+ open roles</p>
             </div>
             <div class="category-card scroll-rotate-in">
-                <div class="category-icon"><img src="./assests//category/Sales.png" alt="Sales"></div>
+                <div class="category-icon"><img src="assets/images/category/Sales.png" alt="Sales"></div>
                 <h3>Sales</h3>
                 <p>2,100+ open roles</p>
             </div>
             <div class="category-card scroll-rotate-in">
-                <div class="category-icon"><img src="./assests//category/Digital Marketing.png" alt="Marketing"></div>
+                <div class="category-icon"><img src="assets/images/category/Digital Marketing.png" alt="Marketing"></div>
                 <h3>Marketing</h3>
                 <p>950+ open roles</p>
             </div>
@@ -136,7 +136,7 @@
 
         <div class="testimonials-grid">
             <div class="testimonial-card scroll-scale-up">
-                <div class="stars"><img src="/assests/ratings.png" alt="Rating"></div>
+                <div class="stars"><img src="assets/images/ratings.png" alt="Rating"></div>
                 <p class="testimonial-text">"Found my current role as a Senior Engineer within just two weeks of signing up. The filtering options are way ahead of any other platform I've used."</p>
                 <div class="testimonial-author">
                     <div class="author-avatar">AR</div>
@@ -148,7 +148,7 @@
             </div>
 
             <div class="testimonial-card scroll-scale-up">
-                <div class="stars"><img src="/assests/ratings.png" alt="Rating"></div>
+                <div class="stars"><img src="assets/images/ratings.png" alt="Rating"></div>
                 <p class="testimonial-text">"We've hired 5 new designers this quarter using JobPortal. The quality of applicants is consistently higher compared to other major job boards."</p>
                 <div class="testimonial-author">
                     <div class="author-avatar">SJ</div>
@@ -160,7 +160,7 @@
             </div>
 
             <div class="testimonial-card scroll-scale-up">
-                <div class="stars"><img src="/assests/ratings.png" alt="Rating"></div>
+                <div class="stars"><img src="assets/images/ratings.png" alt="Rating"></div>
                 <p class="testimonial-text">"The career advice blog helped me polish my resume and prepare for interviews. I felt much more confident going into the process."</p>
                 <div class="testimonial-author">
                     <div class="author-avatar">MT</div>
@@ -192,7 +192,7 @@
             <div class="footer-section scroll-slide-up">
                 <h4>For Job Seekers</h4>
                 <div class="footer-links">
-                    <a href="jobs.html">Browse Jobs</a>
+                    <a href="pages/jobs.html">Browse Jobs</a>
                     <a href="#">Career Advice</a>
                     <a href="#">Salary Tools</a>
                     <a href="#">Resume Builder</a>
@@ -212,8 +212,8 @@
             <div class="footer-section scroll-slide-up">
                 <h4>Our Company</h4>
                 <div class="footer-links">
-                    <a href="about.html">About Us</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="pages/about.html">About Us</a>
+                    <a href="pages/contact.html">Contact</a>
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
                 </div>
@@ -233,6 +233,7 @@
             <div class="footer-bottom-right">English (US) • Cookies</div>
         </div>
     </footer>
-    <script src="authDatabase.js"></script>    <script src="script.js" defer></script>
+    <script src="assets/js/authDatabase.js"></script>    <script src="assets/js/global.js" defer></script>
+    <script src="assets/js/about.js" defer></script>
 </body>
 </html>
