--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Dashboard - JobPortal</title>
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="auth.css">
-    <link rel="stylesheet" href="animations.css">
-    <script src="animations.js" defer></script>
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/auth.css">
+    <link rel="stylesheet" href="/assets/css/animations.css">
+    <script src="/assets/js/animations.js" defer></script>
 </head>
 <body>
     <!-- Header -->
     <header>
-        <a href="index.html" class="logo">
+        <a href="/index.html" class="logo">
             <div class="logo-icon">JP</div>
             <span>JobPortal</span>
         </a>
@@ -340,12 +340,11 @@
         </div>
     </footer>
 
-<script src="authDatabase.js"></script>
-    <script src="jobDatabase.js"></script>
-    <script src="script.js" defer></script>
-<script src="authDatabase.js"></script>
-    <script src="jobDatabase.js"></script>
-    <script src="script.js" defer></script>
+    <script src="/assets/js/authDatabase.js"></script>
+    <script src="/assets/js/jobDatabase.js"></script>
+    <script src="/assets/js/global.js" defer></script>
+    <script src="/assets/js/auth.js" defer></script>
+    <script src="/assets/js/dashboard.js" defer></script>
 </body>
 </html>
 </body>
