--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find Jobs - JobPortal</title>
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="jobs.css">
-    <link rel="stylesheet" href="animations.css">
-    <script src="animations.js" defer></script>
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/jobs.css">
+    <link rel="stylesheet" href="/assets/css/animations.css">
+    <script src="/assets/js/animations.js" defer></script>
 </head>
 <body>
     <!-- Header -->
     <header>
-        <a href="index.html" class="logo">
+        <a href="/index.html" class="logo">
             <div class="logo-icon">JP</div>
             <span>JobPortal</span>
         </a>
@@ -84,8 +84,8 @@
                         <input type="checkbox" id="health" value="Healthcare" data-filter="category">
                         <label for="health">Healthcare</label>
                     </div>
-                    <div class="checkbox-wrapper" checked>
-                        <input type="checkbox" id="design" value="Design" checked data-filter="category">
+                    <div class="checkbox-wrapper">
+                        <input type="checkbox" id="design" value="Design" data-filter="category">
                         <label for="design">Design</label>
                     </div>
                     <div class="checkbox-wrapper">
@@ -236,6 +236,7 @@
     </footer>
 
 
-    <script src="jobDatabase.js"></script>    <script src="authDatabase.js"></script>    <script src="script.js" defer></script>
+    <script src="/assets/js/jobDatabase.js"></script>    <script src="/assets/js/authDatabase.js"></script>    <script src="/assets/js/global.js" defer></script>
+    <script src="/assets/js/jobs.js" defer></script>
 </body>
 </html>
