--- a/pages/job-detail.html
+++ b/pages/job-detail.html
@@ -248,6 +248,7 @@
     </footer>
 
     <script src="/assets/js/jobDatabase.js"></script>    <script src="/assets/js/authDatabase.js"></script>    <script src="/assets/js/global.js" defer></script>
+    <script src="/assets/js/jobs.js" defer></script>
     <script src="/assets/js/job-detail.js" defer></script>
 </body>
 </html>
