update navigation system errors

--- a/pages/about.html
+++ b/pages/about.html
@@ -245,7 +245,9 @@
         </div>
     </footer>
 
+    <script src="../assets/js/authDatabase.js"></script>
     <script src="../assets/js/global.js" defer></script>
+    <script src="../assets/js/auth.js" defer></script>
     <script src="../assets/js/about.js" defer></script>
 </body>
 </html>
