--- a/pages/signup.html
+++ b/pages/signup.html
@@ -496,10 +496,10 @@
             const btn = event.target;
             if (input.type === 'password') {
                 input.type = 'text';
-                btn.textContent = '';
+                btn.textContent = '🙈';
             } else {
                 input.type = 'password';
-                btn.textContent = '';
+                btn.textContent = '👁';
             }
         }
 
