--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
         </div>
     </footer>
     <script src="assets/js/authDatabase.js"></script>    <script src="assets/js/global.js" defer></script>
+    <script src="assets/js/auth.js" defer></script>
     <script src="assets/js/about.js" defer></script>
 </body>
 </html>
