--- a/pages/contact.html
+++ b/pages/contact.html
@@ -227,7 +227,9 @@
     </footer>
 
 
+    <script src="../assets/js/authDatabase.js"></script>
     <script src="../assets/js/global.js" defer></script>
+    <script src="../assets/js/auth.js" defer></script>
     <script src="../assets/js/contact.js" defer></script>
 </body>
 </html>
