--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -237,6 +237,7 @@
 
 
     <script src="../assets/js/jobDatabase.js"></script>    <script src="../assets/js/authDatabase.js"></script>    <script src="../assets/js/global.js" defer></script>
+    <script src="../assets/js/auth.js" defer></script>
     <script src="../assets/js/jobs.js" defer></script>
 </body>
 </html>
