--- a/pages/about.html
+++ b/pages/about.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - JobPortal</title>
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png">
     <link rel="stylesheet" href="../assets/css/global.css">
     <link rel="stylesheet" href="../assets/css/about.css">
     <link rel="stylesheet" href="../assets/css/animations.css">
     <script src="../assets/js/animations.js" defer></script>
 </head>
+
 <body>
     <!-- Header -->
     <header>
@@ -52,7 +55,8 @@
         <div style="max-width: 1200px; margin: 0 auto;">
             <div class="about-hero-img"><!-- add image --></div>
             <h1>Connecting Potential to Opportunity</h1>
-            <p>We are building the future of hiring by bridging the gap between talent and the world's best companies. Our mission is to make job hunting human again.</p>
+            <p>We are building the future of hiring by bridging the gap between talent and the world's best companies.
+                Our mission is to make job hunting human again.</p>
             <div class="about-cta-buttons">
                 <a href="jobs.html" class="btn btn-primary">View Open Roles</a>
                 <a href="#" class="btn btn-secondary">Read Our Story</a>
@@ -83,14 +87,16 @@
     <!-- Timeline -->
     <div class="scroll-fade-in" style="max-width: 1200px; margin: 4rem auto; padding: 0 2rem;">
         <h2 style="margin-bottom: 3rem;">Our Journey So Far</h2>
-        <p style="color: #666; margin-bottom: 2rem;">From a garage project to a global platform, here's how we grew over the years.</p>
+        <p style="color: #666; margin-bottom: 2rem;">From a garage project to a global platform, here's how we grew over
+            the years.</p>
 
         <div class="timeline">
             <div class="timeline-item scroll-slide-left">
                 <div class="timeline-year">2018</div>
                 <div class="timeline-content">
                     <h3><!-- add icone --> The Beginning</h3>
-                    <p>Founded in a small garage in San Francisco with a simple mission: simplify hiring. We launched our beta with just 5 companies.</p>
+                    <p>Founded in a small garage in San Francisco with a simple mission: simplify hiring. We launched
+                        our beta with just 5 companies.</p>
                 </div>
             </div>
 
@@ -98,7 +104,8 @@
                 <div class="timeline-year">2020</div>
                 <div class="timeline-content">
                     <h3><!-- add icone --> First Milestone</h3>
-                    <p>Hit 1,000 active daily users and secured Series A funding. The team grew from 3 to 25 remote employees.</p>
+                    <p>Hit 1,000 active daily users and secured Series A funding. The team grew from 3 to 25 remote
+                        employees.</p>
                 </div>
             </div>
 
@@ -106,7 +113,8 @@
                 <div class="timeline-year">2023</div>
                 <div class="timeline-content">
                     <h3><!-- add icone --> Going Global</h3>
-                    <p>Expanded operations to 3 continents. Launched multi-language support and AI-driven matching algorithms.</p>
+                    <p>Expanded operations to 3 continents. Launched multi-language support and AI-driven matching
+                        algorithms.</p>
                 </div>
             </div>
 
@@ -127,12 +135,14 @@
             <div class="value-card">
                 <div class="value-icon"><!-- add icone --></div>
                 <h3>Integrity First</h3>
-                <p>We believe in doing the right thing, even when no one is watching. Transparency is key to our process.</p>
+                <p>We believe in doing the right thing, even when no one is watching. Transparency is key to our
+                    process.</p>
             </div>
             <div class="value-card">
                 <div class="value-icon"><!-- add icone --></div>
                 <h3>User Obsessed</h3>
-                <p>Whether you are a candidate or an employer, your experience is our top priority. We build for you.</p>
+                <p>Whether you are a candidate or an employer, your experience is our top priority. We build for you.
+                </p>
             </div>
             <div class="value-card">
                 <div class="value-icon"><!-- add icone --></div>
@@ -145,7 +155,7 @@
     <!-- Team -->
     <div style="max-width: 1200px; margin: 4rem auto; padding: 0 2rem;">
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 3rem;">
-            <h2>Meet the Team</h2>            
+            <h2>Meet the Team</h2>
         </div>
 
         <div class="team-grid">
@@ -192,7 +202,8 @@
                     <div class="footer-logo-icon">JP</div>
                     JobPortal
                 </div>
-                <p class="footer-desc">The world's leading professional network for finding your next career milestone and connecting with top talent.</p>
+                <p class="footer-desc">The world's leading professional network for finding your next career milestone
+                    and connecting with top talent.</p>
                 <div class="footer-social">
                     <div class="social-icon">f</div>
                     <div class="social-icon">𝕏</div>
@@ -250,4 +261,5 @@
     <script src="../assets/js/auth.js" defer></script>
     <script src="../assets/js/about.js" defer></script>
 </body>
+
 </html>
