--- a/pages/job-detail.html
+++ b/pages/job-detail.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Details - JobPortal</title>
+        <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png">
+
     <link rel="stylesheet" href="../assets/css/global.css">
     <link rel="stylesheet" href="../assets/css/job-detail.css">
     <link rel="stylesheet" href="../assets/css/animations.css">
