--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - JobPortal</title>
-        <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="/assets/images/favicon-32x32.png">
 
     <link rel="stylesheet" href="../assets/css/global.css">
     <link rel="stylesheet" href="../assets/css/contact.css">
     <link rel="stylesheet" href="../assets/css/animations.css">
     <script src="../assets/js/animations.js" defer></script>
 </head>
+
 <body>
     <!-- Header -->
     <header>
@@ -53,7 +55,8 @@
     <div class="contact-container scroll-fade-in">
         <div class="contact-header scroll-slide-up">
             <h1>We're here to help</h1>
-            <p>Whether you're looking for top talent or your next big career move, our team is ready to answer your questions.</p>
+            <p>Whether you're looking for top talent or your next big career move, our team is ready to answer your
+                questions.</p>
         </div>
 
         <div class="contact-content">
@@ -131,7 +134,8 @@
                     <span class="faq-icon">▼</span>
                 </div>
                 <div class="faq-answer">
-                    Sign up as an employer, verify your company information, and start posting jobs immediately. Our team will review listings to ensure quality standards.
+                    Sign up as an employer, verify your company information, and start posting jobs immediately. Our
+                    team will review listings to ensure quality standards.
                 </div>
             </div>
 
@@ -141,7 +145,8 @@
                     <span class="faq-icon">▼</span>
                 </div>
                 <div class="faq-answer">
-                    You have complete control over your profile visibility. Choose to show or hide your resume, and manage which companies can see your information.
+                    You have complete control over your profile visibility. Choose to show or hide your resume, and
+                    manage which companies can see your information.
                 </div>
             </div>
 
@@ -151,7 +156,8 @@
                     <span class="faq-icon">▼</span>
                 </div>
                 <div class="faq-answer">
-                    Click "Forgot password" on the login page. Enter your email, and we'll send you a password reset link within minutes.
+                    Click "Forgot password" on the login page. Enter your email, and we'll send you a password reset
+                    link within minutes.
                 </div>
             </div>
 
@@ -161,7 +167,8 @@
                     <span class="faq-icon">▼</span>
                 </div>
                 <div class="faq-answer">
-                    We accept all major credit cards, bank transfers, and digital payment methods like PayPal and Stripe for employer subscriptions.
+                    We accept all major credit cards, bank transfers, and digital payment methods like PayPal and Stripe
+                    for employer subscriptions.
                 </div>
             </div>
         </div>
@@ -175,7 +182,8 @@
                     <div class="footer-logo-icon">JP</div>
                     JobPortal
                 </div>
-                <p class="footer-desc">The world's leading professional network for finding your next career milestone and connecting with top talent.</p>
+                <p class="footer-desc">The world's leading professional network for finding your next career milestone
+                    and connecting with top talent.</p>
                 <div class="footer-social">
                     <div class="social-icon">f</div>
                     <div class="social-icon">𝕏</div>
@@ -234,4 +242,5 @@
     <script src="../assets/js/auth.js" defer></script>
     <script src="../assets/js/contact.js" defer></script>
 </body>
+
 </html>
